# newkitine

./: .dockerignore  .env.example  .gitignore  .prettierrc  AGENTS.md  Cargo.toml  DECISIONS.md  Dockerfile  README.md  docker-compose.example.yml  docker-compose.yml
config/: newkitine.toml
src/: lib.rs  main.rs
src/app/: api.rs  behavior.rs  boot.rs  chat.rs  config.rs  contract.rs  db.rs  events.rs  geo.rs  gluetun.rs  interests.rs  mod.rs  peer_history.rs  projection.rs  search.rs  session.rs  settings.rs  state.rs  stats.rs
src/app/behavior/: db.rs  mod.rs  policy.rs  state.rs
src/app/contract/: check.rs  mod.rs
src/app/db/: error.rs  lists.rs  migrations.rs  mod.rs
src/app/settings/: db.rs  http.rs  mod.rs
src/app/transfers/: db.rs  events.rs  http.rs  mod.rs  worker.rs
src/app/users/: db.rs  (+2 more)
src/client/: actor.rs  downloads.rs  event.rs  files.rs  mod.rs  observation.rs  queue.rs  registry.rs  search.rs  shares.rs  uploads.rs  users.rs
src/network/: actor.rs  api.rs  codec.rs  command.rs  conn.rs  event.rs  mod.rs
src/protocol/: compress.rs  distributed.rs  file.rs  mod.rs  peer.rs  peer_init.rs  server_request.rs  server_response.rs  wire.rs
src/types/: bootstrap.rs  chat.rs  client_event.rs  connection.rs  file.rs  interests.rs  mod.rs  network.rs  observation.rs  search.rs  session.rs  settings.rs  share.rs  transfer.rs  transfer_ops.rs  transfer_update.rs  user.rs
tests/: client.rs  network.rs  protocol.rs
tests/common/: mod.rs
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.svelte  app.css  main.js
(+58 files in other folders)
