[package]
name = "newkitine"
version = "0.1.0"
edition = "2024"

[lib]
name = "newkitine"
path = "src/lib.rs"

[[bin]]
name = "newkitine"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
flate2 = "1"
lofty = "0.24.0"
maxminddb = "0.29.0"
md5 = "0.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "mysql"] }
thiserror = "2"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "net", "io-util", "time", "sync", "macros", "fs"] }
toml = "1.1.2"
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
